change supply chain vulnerability to work on docker image